--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,2 @@
-logging.level.org.zalando.logbook=TRACE
-logging.level.ru.yandex.practicum.controller=debug
+logging.level.org.zalando.logbook=warn
+logging.level.ru.yandex.practicum.controller=warn
